re PR fortran/71705 (ICE in lower_omp_target, at omp-low.c:16136)

PR fortran/71705
	* trans-openmp.c (gfc_trans_omp_clauses): Set TREE_ADDRESSABLE on
	decls in to/from clauses.

	* gfortran.dg/gomp/pr71705.f90: New test.

From-SVN: r237887